# matrixso

./: CMakeLists.txt
exe/: CMakeLists.txt
exe/src/: main.cpp  matrix.h
lib/: CMakeLists.txt
lib/src/: export.h  matrix.cpp  matrix.h
lib/src/c/: api.cpp  api.h
